<resources>
    <string name="app_name">Censio</string>
    <string name="censio">Censio</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="publish">Publish</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="re_password">Re-Password</string>
    <string name="sign_out">Sign Out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="enter_a_context">Enter a question or context</string>
    <string name="statement">Statement:</string>
    <string name="feedback">Feedback:</string>
    <string name="comment_instruction">Allow users to freely reply to your statement</string>
    <string name="channel_name">Censio Notifications</string>
    <string name="channel_description">Censio Post Interactions</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="create">Create</string>
    <string name="multi_choice">Multi-Choice</string>
    <string name="comment">Comment</string>
    <string name="poll_posted">You\'ve created a new post!</string>
    <string name="please_enter_statement">Please enter a statement.</string>
    <string name="cannot_exceed_150_chars">Cannot exceed 150 characters.</string>
    <string name="delete_post_confirm">Delete this post?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="login_cancelled">Login Cancelled</string>
    <string name="unknown_response">Unknown Response</string>
    <string name="sign_out_failed">Sign out failed.</string>
    <string name="close_account_confim">Are you sure you want to close your account?</string>
    <string name="re_enter_password">Please re-enter your password</string>
    <string name="remove_account">Remove Account</string>
    <string name="cancel">Cancel</string>
    <string name="field_is_empty">Field is empty.</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="feed">Feed</string>
    <string name="select_picture">Select Picture</string>
    <string name="please_enter_choice">Options cannot be empty.</string>
    <string name="post_a_comment">Post a comment</string>
    <string name="no_feed_posts">No Feed Posts.</string>
    <string name="zero">0</string>
    <string name="you_don_t_have_any_posts">You don\'t have any posts.</string>
    <string name="close_account">Close Account</string>
    <string name="delete">delete</string>
    <string name="thumbs_down_icon_button">Thumbs down icon button.</string>
    <string name="thumbs_up_icon_button">Thumbs up icon button.</string>
    <string name="post_interaction_type_icon">Post interaction type icon.</string>
    <string name="post_author_profile_image">Post author profile image.</string>
    <string name="comment_author_profile_image">Comment author profile image.</string>
    <string name="current_user_profile_image">Current user profile image.</string>
    <string name="like_count_icon">Like count icon.</string>
    <string name="dislikes_count_icon">Dislikes count icon.</string>
    <string name="comment_count_icon">Comment count icon.</string>
    <string name="vote_count_icon">Vote count icon.</string>
    <string name="delete_focused_choice_field">Delete focused choice field.</string>
    <string name="post_type_icon">Post type icon.</string>
    <string name="post_statment">post statement</string>
    <string name="add_choice_option_button">Add choice option button.</string>
    <string name="add_post_button">Add post button.</string>
    <string name="settings">Settings</string>
    <string name="notifications_title">Notifications</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="multi_choice_limit_reached">You have reached the multi-choice limit.</string>
    <string name="option">Option</string>
    <string name="posts">Posts</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="report">report</string>
</resources>
