<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/statement_background"
    android:id="@+id/rl_main">

    <LinearLayout
        android:id="@+id/ll_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:foreground="@drawable/widget_profile_foreground"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:contentDescription="@string/current_user_profile_image" />

    </LinearLayout>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ll_image"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/ll_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:layout_below="@id/tv_username"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/iv_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_touch_app_primary_28dp"
            android:contentDescription="@string/vote_count_icon" />

        <TextView
            android:id="@+id/tv_votes_count"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/iv_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_comment_primary_28dp"
            android:contentDescription="@string/comment_count_icon" />

        <TextView
            android:id="@+id/tv_comments_count"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/iv_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_thumb_up_primary_28dp"
            android:contentDescription="@string/like_count_icon" />

        <TextView
            android:id="@+id/tv_likes_count"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/iv_dislikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_thumb_down_primary_28dp" />

        <TextView
            android:id="@+id/tv_dislikes_count"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/tv_no_active_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_centerInParent="true"
        android:text="@string/login"
        android:textSize="28sp"
        android:textColor="#ffffff"
        android:visibility="gone"/>

    </RelativeLayout>
